--- a/src/app/pages/sponsor/agentes-tabla/agentes-tabla.component.html
+++ b/src/app/pages/sponsor/agentes-tabla/agentes-tabla.component.html
@@ -10,6 +10,73 @@
 	</div>
 </div>
 
+
+<table mat-table [dataSource]="agentesDataSource" matSort>
+
+	<ng-container matColumnDef="select">
+
+		<th mat-header-cell *matHeaderCellDef>
+			<mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+				[indeterminate]="selection.hasValue() && !isAllSelected()">
+			</mat-checkbox>
+		</th>
+
+		<td mat-cell *matCellDef="let row">
+			<mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+				[checked]="selection.isSelected(row.seleccionado)">
+			</mat-checkbox>
+		</td>
+
+	</ng-container>
+
+	<ng-container matColumnDef="seleccionado">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header>seleccionado</th>
+		<td mat-cell *matCellDef="let element"> {{element.seleccionado}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="codAgente">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header>Código Agente</th>
+		<td mat-cell *matCellDef="let element"> {{element.codAgente}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="disponible">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header>disponible</th>
+		<td mat-cell *matCellDef="let element"> {{element.disponible}} </td>
+	</ng-container>
+
+	<ng-container matColumnDef="rutCompletoAgente">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header>Rut Agente</th>
+		<td mat-cell *matCellDef="let element"> {{element.rutCompletoAgente}}</td>
+	</ng-container>
+
+	<ng-container matColumnDef="rutAgente">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header>Rut Agente</th>
+		<td mat-cell *matCellDef="let element"> {{element.rutAgente}}</td>
+	</ng-container>
+
+	<ng-container matColumnDef="dvAgente">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header>Rut Dv</th>
+		<td mat-cell *matCellDef="let element"> {{element.dvAgente}}</td>
+	</ng-container>
+
+	<ng-container matColumnDef="habilitado">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header>Rut Agente</th>
+		<td mat-cell *matCellDef="let element"> {{element.habilitado}}</td>
+	</ng-container>
+
+	<ng-container matColumnDef="nombreAgente">
+		<th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre Agente</th>
+		<td mat-cell *matCellDef="let element"> {{element.nombreAgente}}</td>
+	</ng-container>
+
+
+	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+
 <table width="100%" class="mat-elevation-z8">
 	<thead>
 		<tr>
