--- a/src/app/pages/sponsor/sponsor.component.html
+++ b/src/app/pages/sponsor/sponsor.component.html
@@ -19,6 +19,7 @@
                 Rut</button>
             <button mat-stroked-button color="primary" (click)="AgentesButtonClick()">Agentes</button>
             <button mat-stroked-button color="primary" disabled>Enviar</button>
+            <button mat-stroked-button color="primary" (click)="VolverButtonClick()">Volver</button>
         </div>
 
 
