--- a/src/app/pages/sponsor/agentes-tabla/agentes-tabla.component.css
+++ b/src/app/pages/sponsor/agentes-tabla/agentes-tabla.component.css
@@ -3,10 +3,11 @@ table {
     width: 100%;
     border-collapse: collapse;
 }
-th, td {
-    text-align: left;
-    vertical-align: top;
-    border-bottom: 1px solid #000;
- }
-
-
+table > input[type="checkbox"] {
+    position: relative;
+    display: block;
+    width: 36px;
+    height: 36px;
+    border: 2px solid #808080;
+    background: #fff;
+}
